---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2020.07.XX
  Changes:
    - Revised tier label icons, 32px is now more clear
    - Revised how equipment icon backgrounds are handled
    - Added support for a 6th tier, currently disabled
    - Removed files and code relating to target drone utility
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2020.07.13
  Features:
    - Added customized version of "make_4way_animation_from_spritesheet"
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2020.07.11
  Changes:
    - Code improvements; ensured variables are locally defined
    - Tier labels now have borders on the left
    - Tier labels have been improved at 16x and 8x pixel sizes for clarity
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2020.07.06
  Features:
    - Added function "rescale_remnant"
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2020.06.24
  Changes:
    - Reverted previous change in 0.0.6
    - Sets icon_size and icon_mipmaps at every entry within an icons table when icons are assigned
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2020.06.23
  Changes:
    - Unbrick mods that depend on icon field being present when icons was set by this mod
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2020.06.22
  Features:
    - Added function "startup_setting" to handle validation of startup settings
  Changes:
    - Moved icon assignments to occur immediately, with method to re-apply if necessary