@@ -1,8 +1,8 @@
 [mod-setting-name]
 reskins-lib-icon-tier-labeling=Icon tier labeling
 reskins-lib-icon-tier-labeling-style=Icon tier labeling style
-reskins-lib-tier-mapping=Tier display style
-reskins-lib-customize-tier-colors=Enable Custom Coloring
+reskins-lib-tier-mapping=Tier mapping
+reskins-lib-customize-tier-colors=Enable custom coloring
 reskins-lib-custom-colors-tier-0=Color: Tier 0
 reskins-lib-custom-colors-tier-1=Color: Tier 1
 reskins-lib-custom-colors-tier-2=Color: Tier 2
@@ -12,24 +12,24 @@ reskins-lib-custom-colors-tier-5=Color: Tier 5
 reskins-lib-custom-colors-tier-6=Color: Tier 6
 
 [mod-setting-description]
-reskins-lib-icon-tier-labeling=Icons will display colored bars to indicate tier. Default on.
-reskins-lib-icon-tier-labeling-style=Choose the style of tier label. See mod page for examples. Default "Rounded Rectangles".
-reskins-lib-tier-mapping=Choose between “Name” mapping, where the first tier of any series is always one (1), or “Progression” mapping, where the first tier of each series is based on the ingredients and technology level. For example, under “Name” mapping, the first Oil Refinery is tier one (1). Under “Progression” mapping, the first Oil Refinery is tier two (2). Default “Progression”.
-reskins-lib-customize-tier-colors=Enable customization of tier colors through hexidecimal color values. Supports hex codes in the following form: 'rrggbb', 'rgb', 'rrggbbaa', 'rgba', 'ww', and 'w'. Default off.
-reskins-lib-custom-colors-tier-0=Choose color for Tier 0. Default 4d4d4d (Gray).
-reskins-lib-custom-colors-tier-1=Choose color for Tier 1. Default de9400 (Yellow).
-reskins-lib-custom-colors-tier-2=Choose color for Tier 2. Default c20600 (Red). 
-reskins-lib-custom-colors-tier-3=Choose color for Tier 3. Default 1b87c2 (Blue).
-reskins-lib-custom-colors-tier-4=Choose color for Tier 4. Default a600bf (Magenta).
-reskins-lib-custom-colors-tier-5=Choose color for Tier 5. Default 23de55 (Green).
-reskins-lib-custom-colors-tier-6=Choose color for Tier 6. Default 4d4cff (Violet).
+reskins-lib-icon-tier-labeling=Icons will display colored bars to indicate tier.\n\n[color=#9cdcfe]Default[/color]: [color=green]Enabled[/color]
+reskins-lib-icon-tier-labeling-style=Choose the style of tier label.\n\n[color=#9cdcfe]Default: [img=item.reskins-lib-rounded-rectangle-tier-label]Rounded Rectangles[/color]
+reskins-lib-tier-mapping=Choose between the following tier mappings.\n\n[font=default-semibold]Name[/font]: the first tier of any series is always [color=#de9400][font=default-bold]tier 1[/font][/color].\n[font=default-semibold]Progression[/font]: the tier of each entry in a series is based on the ingredients and technology level.\n\nFor example:\nUnder [font=default-semibold]Name[/font] mapping, the first Oil Refinery is [color=#de9400][font=default-bold]tier 1[/font][/color].\nUnder [font=default-semibold]Progression[/font] mapping, the first Oil Refinery is [color=#c20600][font=default-bold]tier 2[/font][/color].\n\n[color=#9cdcfe]Default: Progression[/color]
+reskins-lib-customize-tier-colors=Enable customization of tier colors through hexidecimal color values. Supports hex codes in the following form: 'rrggbb', 'rgb', 'rrggbbaa', 'rgba', 'ww', and 'w'.\n\n[color=#9cdcfe]Default[/color]: [color=red]Disabled[/color]
+reskins-lib-custom-colors-tier-0=Choose color for Tier 0.\n\n[color=#9cdcfe]Default[/color]: [color=#4d4d4d][font=default-bold]4d4d4d[/font][/color]
+reskins-lib-custom-colors-tier-1=Choose color for Tier 1.\n\n[color=#9cdcfe]Default[/color]: [color=#de9400][font=default-bold]de9400[/font][/color]
+reskins-lib-custom-colors-tier-2=Choose color for Tier 2.\n\n[color=#9cdcfe]Default[/color]: [color=#c20600][font=default-bold]c20600[/font][/color]
+reskins-lib-custom-colors-tier-3=Choose color for Tier 3.\n\n[color=#9cdcfe]Default[/color]: [color=#1b87c2][font=default-bold]1b87c2[/font][/color]
+reskins-lib-custom-colors-tier-4=Choose color for Tier 4.\n\n[color=#9cdcfe]Default[/color]: [color=#a600bf][font=default-bold]a600bf[/font][/color]
+reskins-lib-custom-colors-tier-5=Choose color for Tier 5.\n\n[color=#9cdcfe]Default[/color]: [color=#23de55][font=default-bold]23de55[/font][/color]
+reskins-lib-custom-colors-tier-6=Choose color for Tier 6.\n\n[color=#9cdcfe]Default[/color]: [color=#4d4cff][font=default-bold]4d4cff[/font][/color]
 
 [string-mod-setting]
 reskins-lib-tier-mapping-progression-map=Progression
 reskins-lib-tier-mapping-name-map=Name
-reskins-lib-icon-tier-labeling-style-dots=Dots
-reskins-lib-icon-tier-labeling-style-half-circle=Half Circles
-reskins-lib-icon-tier-labeling-style-rectangle=Rectangles
-reskins-lib-icon-tier-labeling-style-rounded-half-circle=Rounded Half Circles
-reskins-lib-icon-tier-labeling-style-rounded-rectangle=Rounded Rectangles
-reskins-lib-icon-tier-labeling-style-teardrop=Teardrops
+reskins-lib-icon-tier-labeling-style-dots=[img=item.reskins-lib-dots-tier-label]Dots
+reskins-lib-icon-tier-labeling-style-half-circle=[img=item.reskins-lib-half-circle-tier-label]Half-circles
+reskins-lib-icon-tier-labeling-style-rectangle=[img=item.reskins-lib-rectangle-tier-label]Rectangles
+reskins-lib-icon-tier-labeling-style-rounded-half-circle=[img=item.reskins-lib-rounded-half-circle-tier-label]Rounded half-circles
+reskins-lib-icon-tier-labeling-style-rounded-rectangle=[img=item.reskins-lib-rounded-rectangle-tier-label]Rounded rectangles
+reskins-lib-icon-tier-labeling-style-teardrop=[img=item.reskins-lib-teardrop-tier-label]Teardrops
